Fix Recipe Form spacing for german language. Colour the selected language.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -62,6 +62,10 @@
   cursor: pointer;
 }
 
+.language.selected {
+  color: var(--dark_red);
+}
+
 .login-form,
 .signup-form {
   display: flex;
